5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1644_869.log
== TEST (2019-04-16 13:47:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input())
if(valor>=200)
desconto = valor*0.95
print(round(desconto,2))
-- ERROR:
File "XXXX", line 5
    if(valor>=200)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:47:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input())
if(valor>=200):
desconto = valor*0.95
print(round(desconto,2))
-- ERROR:
File "XXXX", line 6
    desconto = valor*0.95
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:50:19) 
-- CODE:
valor = float(input('compra: '))
if(valor>=200):
desconto = valor*0.95
print(round(desconto,2))
-- ERROR:
File "XXXX", line 3
    desconto = valor*0.95
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:59:09) 
-- CODE:
valor = float(input('compra: '))
if(valor>=200):
desconto = valor*0.95
print(round(desconto,2))
-- ERROR:
File "XXXX", line 3
    desconto = valor*0.95
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:59:16) 
-- CODE:
valor = float(input('compra: '))
if(valor>=200):
 desconto = valor*0.95
print(round(desconto,2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:59:36) 
-- CODE:
valor = float(input('compra: '))
if(valor>=200):
 desconto = valor*0.95
print(round(desconto,2))
-- EXECUTION TIME:
0.142331
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
